--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
   margin: 0px 50px 607px 50px;
   -webkit-text-stroke: 0.3px white;
   font-family: "Arial Narrow", Arial, sans-serif;
-  color: #ff7eb0;
+  color: #ffb899;
   position: absolute;
   font-weight: bold;
   opacity: 0;
@@ -249,9 +249,8 @@ body {
   width: 7vmin;
   height: 10vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #ff7eb0;
+  background-color: #ffb899;
   transform-origin: bottom center;
-  opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
 }
 .flower__leaf--p1 {
@@ -331,7 +330,7 @@ body {
   width: 9vmin;
   height: 4vmin;
   border-radius: 50%;
-  background-color: #f74d8e;
+  background-color: #99705e;
 }
 .flower__white-circle::after {
   content: "";
@@ -512,7 +511,7 @@ body {
   bottom: 0vmin;
   width: 1vmin;
   height: 1vmin;
-  background-color: #ff7eb0;
+  background-color: #ffb899;
   border-radius: 50%;
   filter: blur(0.2vmin);
   -webkit-animation: light-ans 4s linear infinite backwards;
